<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">开维宝宝</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="get_tf">获得tf文件目录</string>
    <string name="local_path">/TFCard/hope_box_courses.zip/</string>
    <string name="time">时长</string>
    <string name="ewmscan">扫码上课  </string>
    <string name="replay">重播</string>
    <string name="previous">上一个</string>
    <string name="next">下一个</string>
    <string name="smsk">扫码上课</string>
    <string name="smewmxz">扫描左方的二维码下载\n开维宝宝园丁</string>
    <string name="trsmewmxz">扫描左方的二维码下载\n图睿宝宝园丁</string>
    <string name="tellphone">电话：0755-88250405</string>
    <string name="vitamio_library_app_name">VitamioLibrary</string>
    <string name="vitamio_init_decoders">Initializing decoders…</string>
    <string name="permission_group_tools_label">Vitamio tools</string>
    <string name="permission_group_tools_description">Access Vitamio package and resources.</string>
    <string name="permission_receive_messages_label">Receive Vitamio messages</string>
    <string name="permission_receive_messages_description">Receive all broadcasts from Vitamio service.</string>
    <string name="permission_write_providers_label">Write Vitamio providers</string>
    <string name="permission_write_providers_description">Delete, update or create new items in Vitamio providers.</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
        this device.</string>
    <string name="VideoView_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="tpye_of_data">DEVICE_INFOO</string>
</resources>